fix slider button's z-index

--- a/app/sass/_product-card.sass
+++ b/app/sass/_product-card.sass
@@ -54,7 +54,7 @@
 		user-select: none
 		cursor: pointer
 		margin: 0 9px
-		z-index: 99999 !important
+		z-index: 99
 		@include for-tablet-landscape
 			width: auto
 			height: auto
